change implementation to recognize duplicate variable in same block